# linux_tracing_sandbox

./: .gitignore  Makefile  README.md
docs/: bpf_docs.md  kernel_bpf_examples.md  notes.md  playing_with_bpftool.md  troubleshooting_nftables.md  troubleshooting_nftables.txt
src/cilium_tests/: README.md
src/test_bcc/: README.md  bcc_and_docker.md
src/test_bpf/: .gitignore  Makefile  README.md  add_tailcall.cpp  common.h  make_cscope.sh  playing_with_bpftool.md  tailcall_kern.c  test_kern.c  test_load.c  test_load.cpp
src/test_bpf/swig/: TableReader.cpp  TableReader.h  TableReader.i
src/test_kprobe/: Makefile  kprobe_kern.c  load_kprobe.c
src/tuntap_tests/: Dockerfile  container.yml  docker-compose.yml
src/tuntap_tests/src/: CMakeLists.txt  app.cpp  asio_test.cpp  tuntaptest.cpp
